<resources>
    <string name="app_name">CardFolio_App</string>

    <string name="app_login">로그인</string>
    <string name="app_id">아이디</string>
    <string name="app_id_chk">중복확인</string>
    <string name="app_pw">비밀번호</string>
    <string name="app_pw2">비밀번호 확인</string>
    <string name="app_uname">이름</string>
    <string name="app_company">회사 이름</string>
    <string name="app_tel">휴대폰</string>
    <string name="app_email">이메일 주소</string>
    <string name="app_addr">주소</string>
    <string name="app_register">회원가입</string>
    <string name="app_add_card">명함등록 완료</string>
    <string name="app_modify_card">명함수정 완료</string>
    <string name="app_register_done">회원가입 완료</string>
    <string name="app_logo">로고</string>
    <string name="app_upload">업로드</string>
    <string name="app_download">다운로드</string>

    <string name="app_home">HOME</string>
    <string name="app_cards">명함집</string>
    <string name="app_scan">명함스캔</string>
    <string name="app_mypage">마이페이지</string>

    <string name="app_mn1">나의명함</string>
    <string name="app_mn2">명함집</string>
    <string name="app_mn3">명함스캔</string>
    <string name="app_mn4">마이페이지</string>

    <string name="search_hint">업체명 또는 이름을 입력해주세요</string>

</resources>