<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    tools:context=".LoginActivity">
       <LinearLayout
           android:id="@+id/linearLayout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <ImageView
                   android:layout_width="216dip"
                   android:layout_height="117dip"
                   android:layout_gravity="center"
                   android:layout_marginBottom="@dimen/margin_lg"
                   android:src="@drawable/logo" />

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <EditText
                   android:id="@+id/edt_login_id"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/btn_height"
                   android:layout_gravity="center"
                   android:layout_marginVertical="@dimen/margin_sm"
                   android:singleLine="true"
                   android:hint="@string/app_email"
                   android:inputType="textEmailAddress"
                   android:background="@drawable/edittext_background"
                   android:textColor="@color/black"
                   android:textColorHint="@color/hint"/>

               <EditText
                   android:id="@+id/edt_login_pw"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/btn_height"
                   android:layout_gravity="center"
                   android:layout_marginVertical="@dimen/margin_sm"
                   android:singleLine="true"
                   android:background="@drawable/edittext_background"
                   android:hint="@string/app_pw"
                   android:inputType="textPassword"
                   android:textColor="@color/black"
                   android:textColorHint="@color/hint" />

               <android.widget.Button
                   android:id="@+id/btn_login"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/btn_height"
                   android:layout_marginVertical="@dimen/margin_sm"
                   android:background="@drawable/button_round_background"
                   android:textColor="@color/white"
                   android:textSize="@dimen/text_size_md"
                   android:textStyle="bold"
                   android:text="@string/app_login" />

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:layout_marginTop="@dimen/margin_sm"
               android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/text_size_xs"
                   android:textColor="#AAAAAA"
                   android:text="비밀번호를 잊으셨나요?"/>

               <TextView
                   android:id="@+id/et_send_pw"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/text_size_xs"
                   android:textColor="@color/black"
                   android:layout_marginLeft="@dimen/margin_sm"
                   android:text="비밀번호 재설정"/>
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:layout_marginTop="@dimen/margin_sm"
               android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_xs"
                    android:textColor="#AAAAAA"
                    android:text="아직 회원이 아니신가요?"/>

               <TextView
                   android:id="@+id/et_to_register"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/text_size_xs"
                   android:textColor="@color/black"
                   android:layout_marginLeft="@dimen/margin_sm"
                   android:text="@string/app_register"/>
           </LinearLayout>
       </LinearLayout>
</LinearLayout>